kagenti/examples/identity/keycloak_token_exchange/resources/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 1.11.0
  name: keycloak-http
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.$APP_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
